# SnakeGame

./: CMakeLists.txt  CMakeSettings.json  SnakeGame.sln  snake_sfml.sln
SnakeGame/: SnakeGame.vcxproj  SnakeGame.vcxproj.filters
SnakeGame/Debug/: vc143.idb
SnakeGame/Debug/SnakeGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SnakeGame.lastbuildstate
SnakeGame/x64/Debug/: SnakeGame.exe.recipe  SnakeGame.ilk  vc143.idb
SnakeGame/x64/Debug/SnakeGame.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  SnakeGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SnakeGame/x64/Release/: SnakeGame.exe.recipe  SnakeGame.iobj  SnakeGame.ipdb
SnakeGame/x64/Release/SnakeGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SnakeGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
snake_sfml/: config.h  game.cpp  game.h  gfx.cpp  gfx.h  main.cpp  snake_sfml.vcxproj  snake_sfml.vcxproj.filters
snake_sfml/x64/Debug/: snake_sfml.exe.recipe  snake_sfml.ilk  vc143.idb
snake_sfml/x64/Debug/snake_sfml.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  snake_sfml.lastbuildstate
src/: main.cpp
